<resources>
    <string name="sign">签到</string>
    <string name="integral">积分</string>
    <string name="Japanese_currency">日币</string>
    <string name="friendliness">友好度</string>
    <string name="prestige">威望</string>
    <string name="edit">编辑</string>
    <string name="interest_label">兴趣标签</string>
    <string name="follow">关注</string>
    <string name="edit_information">编辑资料</string>
    <string name="fans">粉丝</string>
    <string name="no_answer_get_first_answer">还没有人回答，抢一楼~</string>
    <string name="answer">答</string>
    <string name="no_more">没有更多了</string>
    <string name="more_loading">更多加载中...</string>
    <string name="mall_center_label_qa">帮助与客服</string>
    <string name="mall_center_label_receipt">发票服务</string>
    <string name="order_return_goods_logistics">收货状态</string>
    <string name="order_return_deliver_status">请选择收货状态</string>
    <string name="mall_discount_history">收支明细查询</string>
    <string name="mall_shop_no_sale">该商品已下架或不存在</string>
    <string name="mall_confirm">确定</string>
    <string name="mall_confirm2">确认</string>
    <string name="mall_after_sell_service_title">售后详情</string>
    <string name="mall_after_sale_comment_hint">最多100字</string>
    <string name="mall_order_return_hint_sku">请选择换货参数</string>
    <string name="mall_order_return_label_sku">选择换货参数</string>
    <string name="mall_order_return_content_sku">已选：\"%1$s\"\"%2$s\"</string>
    <string name="mall_order_return_content_sku_desc">提醒：您申请的换货有可能缺货，以实际发货为准，如有疑问，请联系客服</string>
    <string name="mall_audience_list_title">观赛人信息</string>
    <string name="mall_audience_label_name">观赛人：</string>
    <string name="mall_audience_label_card">身份证号：</string>
    <string name="mall_audience_input_title">添加观赛人</string>
    <string name="mall_audience_update_title">编辑观赛人信息</string>
    <string name="mall_audience_hint_name">请输入真实姓名</string>
    <string name="mall_audience_hint_card">请输入证件号码</string>
    <string name="mall_audience_add_confirm">确定</string>
    <string name="mall_audience_notify_name">请输入真实姓名</string>
    <string name="mall_audience_notify_card">请输入身份证号</string>
    <string name="mall_audience_add1">+ 录入身份信息</string>
    <string name="mall_audience_add2">+ 添加/修改观赛人</string>
    <string name="mall_audience_add3">+ 添加新的观赛人</string>
    <string name="mall_audience_delete_ok">删除成功</string>
    <string name="mall_confirm_order_audience_info">已添加%1$d人 | 至少需要%2$d人</string>
    <string name="mall_confirm_order_audience_label">请选择观赛人</string>
    <string name="ticket_title">取票信息</string>
    <string name="ticket_label_addr">取票地址</string>
    <string name="ticket_label_img">参考图片</string>
    <string name="mall_landing_to_home">到首页逛逛</string>
    <string name="audience_selected_name_label">观赛人：</string>
    <string name="audience_selected_card_label">身份证：</string>
    <string name="audience_count_not_enough">请选择有效观赛人信息</string>
    <string name="audience_count_not_enough2">请选择有效观赛人信息</string>
    <string name="audience_edit">编辑</string>
    <string name="audience_delete">删除</string>
    <string name="audience_cancel">取消</string>
    <string name="audience_delete_notify">确认要删除观赛人信息？</string>
    <string name="audience_save">保存</string>
    <string name="audience_confirm">确认</string>
    <string name="audience_delete_fail">删除失败</string>
    <string name="audience_empty">还未录入任何信息</string>
    <string name="order_copy">复制</string>
    <string name="order_copy_ok">复制成功</string>
    <string name="order_confirm_receive_ok">确认收货成功</string>
    <string name="order_confirm_receive_fail">确认收货失败</string>
    <string name="mall_order_return_hint_no_item_code">请选择换货参数</string>
    <string name="order_confirm_receive">确认收货</string>
    <string name="after_sale_cancel_ok">取消成功</string>
    <string name="after_sale_cancel_fail">取消失败</string>
    <string name="after_sale_cancel">取消申请</string>
    <string name="after_sale_edit">修改申请</string>
    <string name="after_sale_cancel_notify">是否取消售后申请</string>
    <string name="after_sale_cancel_notify_ok">确定</string>
    <string name="after_sale_cancel_notify_no">我再想想</string>
    <string name="receipt_entry_item_common">增值税普通发票</string>
    <string name="receipt_entry_item_tax">增值税专用发票</string>
    <string name="receipt_entry_item_history">发票历史</string>
    <string name="receipt_orderlist_num">共%d个订单，实付款:</string>
    <string name="receipt_orderlist_money">&#165;%s</string>
    <string name="receipt_orderlist_next">下一步</string>
    <string name="receipt_order_time">下单时间：%s</string>
    <string name="receipt_order_info">共%1$d件商品 实付款：&#165;%2$s</string>
    <string name="receipt_invoice_order_info">%1$d张发票，含%2$d笔订单</string>
    <string name="receipt_detail_title">开票详情</string>
    <string name="receipt_enter_title">发票服务</string>
    <string name="receipt_invocie_list_title">发票历史</string>
    <string name="receipt_invocie_order_list_common_title">增值税普通发票</string>
    <string name="receipt_invocie_order_list_tax_title">增值税专用发票</string>
    <string name="receipt_invocie_order_list_unusable_title">不可开发票订单</string>
    <string name="receipt_invocie_order_list_detail_title">开票订单</string>
    <string name="receipt_enter_btn_invoice_info">开票须知</string>
    <string name="receipt_fetch_history_fail">获取历史记录失败</string>
    <string name="receipt_item_info">%1$s元 %2$s | %3$s</string>
    <string name="receipt_label_choose_order">选择订单</string>
    <string name="receipt_toast_no_order">请至少选择一个订单</string>
    <string name="receipt_guide_no_order">5折卡、彩票、线下场地预订不支持开票，球票开发票请联系在线客服</string>
    <string name="receipt_add_lable_type">请选择发票类型</string>
    <string name="receipt_add_lable_detail">发票详情</string>
    <string name="receipt_add_lable_addr">收件地址</string>
    <string name="receipt_type_online">电子发票</string>
    <string name="receipt_type_paper">纸质发票</string>
    <string name="receipt_label_type">抬头类型</string>
    <string name="receipt_label_company_name">单位名称</string>
    <string name="receipt_label_tax_number">纳税人识别号</string>
    <string name="receipt_label_content">发票内容</string>
    <string name="receipt_label_price">发票金额</string>
    <string name="receipt_label_remark">备注信息</string>
    <string name="receipt_label_email">电子邮件</string>
    <string name="receipt_label_phone">联系电话</string>
    <string name="receipt_label_phone2">电话</string>
    <string name="receipt_label_addr">详细地址</string>
    <string name="receipt_label_addr_receiver">收件人</string>
    <string name="receipt_label_company_addr">注册地址</string>
    <string name="receipt_label_company_phone">注册电话</string>
    <string name="receipt_label_bank">开户银行</string>
    <string name="receipt_label_bank_account">银行账户</string>
    <string name="receipt_label_create_at">申请时间</string>
    <string name="receipt_label_license1">上传营业执照</string>
    <string name="receipt_label_license2">上传开户许可</string>
    <string name="receipt_label_license3">上传纳税人\n资质证明</string>
    <string name="receipt_hint_company_name">填写单位全称</string>
    <string name="receipt_hint_tax_number">填写纳税人识别号</string>
    <string name="receipt_hint_content">选择发票内容</string>
    <string name="receipt_hint_remark">(选填)</string>
    <string name="receipt_hint_email">用于向您发送电子发票</string>
    <string name="receipt_hint_phone">请填写联系电话</string>
    <string name="receipt_hint_company_addr">填写公司的注册地址</string>
    <string name="receipt_hint_company_phone">填写公司的注册电话</string>
    <string name="receipt_hint_bank">填写开户银行</string>
    <string name="receipt_hint_bank_account">填写银行账号</string>
    <string name="receipt_hint_pricet">18元</string>
    <string name="receipt_hint_addr">请填写收件人信息</string>
    <string name="receipt_notify_content">请选择发票内容</string>
    <string name="receipt_notify_company_name">请填写单位全称</string>
    <string name="receipt_notify_tax_number">请填写纳税人识别号</string>
    <string name="receipt_notify_tax_number_format">纳税人识别号错误</string>
    <string name="receipt_notify_company_addr">请填写公司的注册地址</string>
    <string name="receipt_notify_company_phone">请填写公司的注册电话</string>
    <string name="receipt_notify_company_phone_format">请填写有效的公司注册电话</string>
    <string name="receipt_notify_bank">请填写开户银行</string>
    <string name="receipt_notify_bank_account">请填写银行账号</string>
    <string name="receipt_notify_license_1">请上传营业执照</string>
    <string name="receipt_notify_license_2">请上传开户许可</string>
    <string name="receipt_notify_license_3">请上传纳税人资质证明</string>
    <string name="receipt_notify_addr">请选择收件地址</string>
    <string name="receipt_notify_email">请填写电子邮件</string>
    <string name="receipt_notify_phone">联系方式不能为空</string>
    <string name="receipt_notify_email_format">请填写有效的电子邮件</string>
    <string name="receipt_notify_mobile_format">请填写有效的联系电话</string>
    <string name="receipt_notify_network_error">网络出错，无法提交新发票!</string>
    <string name="receipt_notify_email_error">邮件发送失败</string>
    <string name="receipt_price">%s元</string>
    <string name="receipt_addr">收货人：%1$s\n收货地址：%2$s</string>
    <string name="receipt_addr_name">收货人</string>
    <string name="receipt_addr_addr">收货地址</string>
    <string name="receipt_meterial_info_online">电子发票与纸质发票具备同等法律效力，可支持报销</string>
    <string name="receipt_meterial_info_paper">纸质发票开票较慢，建议您选择电子发票</string>
    <string name="receipt_email_info">邮件发送有延迟，请留意您的邮箱</string>
    <string name="receipt_email_send">重新发送邮件</string>
    <string name="receipt_email_send_ok">重新发送成功</string>
    <string name="receipt_email_send_already">电子发票已发送</string>
    <string name="receipt_personal">个人</string>
    <string name="receipt_company">单位</string>
    <string name="receipt_logistics">物流信息</string>
    <string name="receipt_receive_info">收件信息</string>
    <string name="receipt_invoice_info">发票信息</string>
    <string name="receipt_invoice_download">下载发票</string>
    <string name="receipt_recreate">重新申请</string>
    <string name="receipt_resend">重新发送电子发票</string>
    <string name="receipt_invoice_detail">发票详情</string>
    <string name="receipt_invoice_image">上传凭证</string>
    <string name="receipt_invoice_submit">提交</string>
    <string name="receipt_invoice_submit_alert_confirm">确认提交</string>
    <string name="receipt_default_addr_hint">请填写收件人信息</string>
    <string name="receipt_unusable_order_entry">不支持开发票订单</string>
    <string name="receipt_company_confirm_title">请正确核对单位名称及纳税人识别号，若填写错误，不支持重新开票！</string>
    <string name="receipt_company_confirm_name">公司名：%s</string>
    <string name="receipt_company_confirm_tax_number">纳税人识别号：%s</string>
    <string name="receipt_company_confirm_addr_name">收货人：%s</string>
    <string name="receipt_company_confirm_addr">收货地址：%s</string>
    <string name="receipt_company_confirm_email">电子邮件：%s</string>
    <string name="text_place_holder">示例文字</string>
    <string name="mall_combine_list_title">加价购热销单品</string>
    <string name="mall_combine_info_place_holder">+9元 可购懂球帝专属鞋袋一个,(总价&#165;488) 立省5.9元</string>
    <string name="mall_combine">购买套餐</string>
    <string name="mall_combine_amount">总价：&#165;%s</string>
    <string name="mall_combine_concessions">省：&#165;%s</string>
    <string name="sec_pager_title">限时秒杀</string>
    <string name="sec_list_title">限时秒杀</string>
    <string name="sec_out">补货中</string>
    <string name="sec_ordering_notify">补货中，还有机会</string>
    <string name="coupon_title">领券中心</string>
    <string name="coupon_title2">优惠券</string>
    <string name="coupon_detail_title">领券</string>
    <string name="coupon_cart_title">优惠券</string>
    <string name="coupon_cart_item_title">优惠</string>
    <string name="coupon_cart_item_go">去领券</string>
    <string name="combine_list_title_total">[套餐价格&#165;%s]</string>
    <string name="goods_receipt_name">收货人姓名:</string>
    <string name="idcard">身份证号:</string>
    <string name="mobile_phone">手机号码:</string>
    <string name="provice_city">省市区:</string>
    <string name="detail_address">详细地址:</string>
    <string name="addaddress_hint_name">建议使用真实姓名</string>
    <string name="addaddress_hint_tel">请输入您的手机号</string>
    <string name="addaddress_hint_idno">请输入真实身份证号</string>
    <string name="addaddress_hint_address">请输入详细地址</string>
</resources>