<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f5"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <org.ayo.view.widget.TitleBar
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/titlebar_layout"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="5dp"
            android:background="@color/mall_listview_divider"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="@string/goods_receipt_name"
                android:textColor="@color/address_key"

                android:textSize="@dimen/address_text"/>

            <EditText
                android:id="@+id/name"
                style="@style/add_address_edit"
                android:ellipsize="end"
                android:hint="@string/addaddress_hint_name"
                android:singleLine="true"
                />
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_height"
            android:background="@color/mall_listview_divider"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/address_margin"
            android:paddingRight="@dimen/address_margin"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="@string/mobile_phone"
                android:textColor="@color/address_key"
                android:textSize="@dimen/address_text"/>

            <EditText
                android:id="@+id/tel"
                style="@style/add_address_edit"
                android:hint="@string/addaddress_hint_tel"
                android:inputType="number"
                android:maxLength="11"
                />
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_height"
            android:background="@color/mall_listview_divider"/>

        <LinearLayout
            android:id="@+id/layout_provice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal"
            android:padding="@dimen/address_margin"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="@string/provice_city"
                android:textColor="@color/address_key"
                android:textSize="@dimen/address_text"
                />

            <TextView
                android:id="@+id/province"
                style="@style/add_address_edit"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:padding="0dp"

                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/right_arrow"
                />
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_height"
            android:background="@color/mall_listview_divider"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/address_margin"
            android:paddingRight="@dimen/address_margin"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="@string/detail_address"
                android:textColor="@color/address_key"
                android:textSize="@dimen/address_text"

                />

            <EditText
                android:id="@+id/address"
                style="@style/add_address_edit"
                android:ellipsize="end"
                android:hint="@string/addaddress_hint_address"
                android:maxLines="4"
                />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/layout_idcard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <ImageView

                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_height"
                android:background="@color/mall_listview_divider"/>

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/address_margin"
                android:paddingRight="@dimen/address_margin"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:text="@string/idcard"
                    android:textColor="@color/address_key"
                    android:textSize="@dimen/address_text"

                    />

                <EditText
                    android:id="@+id/idcard"
                    style="@style/add_address_edit"
                    android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                    android:hint="@string/addaddress_hint_idno"
                    />
            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_height"
                android:background="@color/mall_listview_divider"/>
        </LinearLayout>


        <RelativeLayout
            android:id="@+id/tips_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/tips_bg"
            android:visibility="gone">

            <ImageView
                android:id="@+id/img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginBottom="12dp"
                android:layout_marginLeft="9dp"
                android:layout_marginRight="9dp"
                android:layout_marginTop="12dp"
                android:src="@drawable/careful"
                />

            <TextView
                android:id="@+id/tips"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/img"
                android:textColor="#555"
                android:textSize="12sp"
                />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_height"
            android:background="@color/mall_listview_divider"/>

        <TextView
            android:id="@+id/add_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="7dp"
            android:background="@drawable/addaddress_bg_delete"
            android:gravity="center"
            android:paddingBottom="12dp"
            android:paddingTop="12dp"
            android:text="删除"
            android:textColor="@color/white"
            android:textSize="16sp"
            />
    </LinearLayout>
</RelativeLayout>
